Added some changes  and comments

--- a/Ex3/Views/Display/SinglePoint.cshtml
+++ b/Ex3/Views/Display/SinglePoint.cshtml
@@ -6,7 +6,7 @@
 
 <div style="display:none;">
     <img id="map" ++++
-         src="~/Content/export-map-share.png" />
+         src="~/export-map-share.png" />
 </div>
 <!img id="bg" src="~/Content/export-map-share.png" alt="World Map">
 <canvas id="myCanvas"></canvas>
